# GenomeCF

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RESULTS_STATUS.md  apptainer.def  codemeta.json  environment.yml  sitecustomize.py
configs/: model_manifests.jsonl  split_manifests.jsonl
data/: README.md
docs/: ARTIFACT_EVALUATION.md  BENCHMARK.md  BENCHMARK_AVAILABILITY.md  BENCHMARK_WEBSITE.md  BIOLOGICAL_CASE_STUDY.md  CADUCEUS_SETUP.md  CODE_AVAILABILITY.md  DOCKER.md  ENVIRONMENT_AVAILABILITY.md  EXTERNAL_VALIDATION.md  FOUNDATION_MODELS.md  GC_BIN_ROBUSTNESS.md  METRICS.md  MODEL_AVAILABILITY.md  NATURE_METHODS_FORMAT_AUDIT.md  NATURE_METHODS_RELEASE.md  NATURE_METHODS_REVIEWER_RISK_AUDIT.md  NATURE_METHODS_SUBMISSION_CHECKLIST.md  PERTURBATIONS.md  PROTOCOL.md  QUICKSTART.md  RELEASE_SCOPE.md  REPORTING_STANDARD.md  REPRODUCIBILITY.md  REPRODUCIBILITY_PROTOCOL.md  RESULT_SCHEMA.md  TASKS.md  TASK_MANIFESTS.md  reporting_checklist.yaml
envs/: caduceus.yml
figshare_data/: CHECKSUMS_SHA256.txt  MISSING_EXPECTED_FILES.md  README.md
figshare_data/manifests_and_metadata/: README.md  RESULT_SCHEMA.md  SPLITS.md  manifest_summary.md  perturbation_manifests.jsonl  pyproject.toml  task_manifests.jsonl
figshare_uploads/: FIGSHARE_FILE_MANIFEST.csv  FIGSHARE_UPLOAD_REPORT.md  figshare_data_manifest.json
paper/: .gitignore  README.md  claims.yaml  genomecf_report.tex  genomecf_supplement.tex  refs.bib
release/: GenomeCF_v1_checksums.txt  GenomeCF_v1_expected_outputs.md  GenomeCF_v1_manifest.json  (+1 more)
(+640 files in other folders)
